@@ -1,5 +1,5 @@
 .\"
-.\" "$Id: lpadmin.man,v 1.4.2.5 2003/01/31 20:09:54 mike Exp $"
+.\" "$Id: lpadmin.man,v 1.4.2.6 2003/03/04 21:42:18 mike Exp $"
 .\"
 .\"   lpadmin man page for the Common UNIX Printing System (CUPS).
 .\"
@@ -110,12 +110,13 @@ None, BCP, or TBCP. The default protocol is None.
 Removes the named \fIprinter\fR from \fIclass\fR.  If the resulting class
 becomes empty it is removed.
 .TP 5
-\-u \fIallow:user,user\fR
-\-u \fIdeny:user,user\fR
+\-u \fIallow:user,user,@group\fR
+\-u \fIdeny:user,user,@group\fR
 \-u \fIallow:all\fR
 \-u \fIdeny:none\fR
 .br
-Sets user-level access control on a printer. The latter two forms turn
+Sets user-level access control on a printer. Names starting with
+"@" are interpreted as UNIX groups. The latter two forms turn
 user-level access control off.
 .TP 5
 \-v \fIdevice-uri\fR
@@ -157,5 +158,5 @@ http://localhost:631/documentation.html
 .SH COPYRIGHT
 Copyright 1993-2003 by Easy Software Products, All Rights Reserved.
 .\"
-.\" End of "$Id: lpadmin.man,v 1.4.2.5 2003/01/31 20:09:54 mike Exp $".
+.\" End of "$Id: lpadmin.man,v 1.4.2.6 2003/03/04 21:42:18 mike Exp $".
 .\"
